--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -6,7 +6,7 @@
     <section id="sobre-mi" class="d-flex align-items-center">
         <div class="row">
             <div class="col-md-4 text-center">
-<!--                <img src="{% static 'images/Kiko_Amarillo_CARA.jpg' %}" alt="José Francisco González Amarillo" class="rounded-circle profile-image">-->
+                <img src="{% static 'images/Kiko_Amarillo_CARA.jpg' %}" alt="José Francisco González Amarillo" class="rounded-circle profile-image">
             </div>
             <div class="col-md-8 d-flex align-items-center">
                 <div>
