--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Russo+One&display=swap" rel="stylesheet">
 </head>
 
-<body class="loader">
+<body class="loader d-flex flex-column min-vh-100">
     <nav class="navbar bg-body-tertiary border-bottom border-body fixed-top russo-one-regular" data-bs-theme="dark">
         <div class="container-fluid">
             <ul class="nav">
@@ -52,14 +52,14 @@
         </div>
     </nav>
 
-    <div class="container .montserrat-regular">
+    <div class="container flex-grow-1 montserrat-regular">
         {% block body_block %}
 
         {% endblock %}
     </div>
 </body>
 
-<footer class="bg-dark text-center text-light py-4 mt-auto">
+<footer class="bg-dark text-center text-light py-4">
     <div class="container">
         <p>&copy; 2024 José Francisco González Amarillo</p>
         <a href="https://www.linkedin.com/in/kikoamarillo/" target="_blank">LinkedIn</a> |
