--- a/myportfolio/static/css/style.css
+++ b/myportfolio/static/css/style.css
@@ -45,6 +45,47 @@ footer {
     border: 3px solid #bb86fc;
 }
 
+.card-img-top {
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+}
+
+.slider {
+    width: 75vw;
+    height: auto;
+    margin: auto;
+    overflow: hidden;
+}
+
+.slider .slide-track {
+    display: flex;
+    animation: scroll 40s linear infinite;
+    -webkit-animation: scroll 40s linear infinite;
+    width: calc(100px * 32);
+}
+
+.slider .slide {
+    width: 100px;
+}
+
+.slider .slide img {
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
+}
+
+@keyframes scroll {
+    0% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+    100% {
+        -webkit-transform: translateX(calc(-100px * 16));
+        transform: translateX(calc(-100px * 16));
+    }
+}
+
 /* CONTACT.HTML */
 .form-group label {
     margin-bottom: 0.5rem;
@@ -56,6 +97,8 @@ footer {
     font-size: 0.90rem; /* Tamaño de fuente */
     line-height: 1.5; /* Altura de línea para mejor legibilidad */
 }
+
+
 
 
 
