--- a/myportfolio/templates/projects/base.html
+++ b/myportfolio/templates/projects/base.html
@@ -3,6 +3,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - José Francisco González Amarillo</title>
    <!-- Bootstrap Links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -57,6 +58,48 @@
 
         {% endblock %}
     </div>
+
+
+<script type="x-shader/x-fragment">#version 300 es
+/*********
+* made by Matthias Hurrle (@atzedent)
+*/
+precision highp float;
+out vec4 O;
+uniform float time;
+uniform vec2 resolution;
+#define FC gl_FragCoord.xy
+#define R resolution
+#define T time
+#define hue(a) (.6+.6*cos(6.3*(a)+vec3(0,83,21)))
+float rnd(float a) {
+	vec2 p=fract(a*vec2(12.9898,78.233));	p+=dot(p,p*345.);
+	return fract(p.x*p.y);
+}
+vec3 pattern(vec2 uv) {
+	vec3 col=vec3(0);
+	for (float i=.0; i++<20.;) {
+		float a=rnd(i);
+		vec2 n=vec2(a,fract(a*34.56)), p=sin(n*(T+7.)+T*.5);
+		float d=dot(uv-p,uv-p);
+		col+=.00125/d*hue(dot(uv,uv)+i*.125+T);
+	}
+	return col;
+}
+void main(void) {
+	vec2 uv=(FC-.5*R)/min(R.x,R.y);
+	vec3 col=vec3(0);
+	float s=2.4,
+	a=atan(uv.x,uv.y),
+	b=length(uv);
+	uv=vec2(a*5./6.28318,.05/tan(b)+T);
+	uv=fract(uv)-.5;
+	col+=pattern(uv*s);
+	O=vec4(col,1);
+}</script>
+<!-- Enlace a los archivos JavaScript -->
+<script src="{% static 'js/editor.js' %}"></script>
+<!--<script src="{% static 'js/gametransition.js' %}"></script>-->
 </body>
 
 <footer class="bg-dark text-center text-light py-4">
