--- a/myportfolio/templates/projects/index.html
+++ b/myportfolio/templates/projects/index.html
@@ -11,11 +11,141 @@
             <div class="col-md-8 d-flex align-items-center">
                 <div>
                     <h1 class="display-4 nombre-completo">José Francisco González Amarillo</h1>
-                    <p class="lead descripcion">Desarrollador de software con experiencia en Python y frameworks como Django, Jinja y Bootstrap.</p>
+                    <p class="lead descripcion">Desarrollador de software con experiencia en Python y frameworks como Django, Flask, Jinja y Bootstrap. Mi objetivo es especializarme en Python así como seguir aumentando conocimiento sobre otras tecnologías.</p>
+                    <div class="email-section mt-2">
+                        <i class="fas fa-envelope"></i>
+                        <span class="email-text ms-2">kikoamarillo94@gmail.com</span>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <hr class="my-4">
+
+    <!-- Sección: Experiencia -->
+    <section id="experiencia" class="mt-5">
+        <h2 class="text-center">Experiencia Laboral</h2>
+        <div class="row mt-4">
+            <div class="col-12">
+                <h4><strong>Junior Software Developer - Abaco Developments</strong></h4>
+                <p>Abril 2024 - Junio 2024</p>
+                <ul>
+                    <li>Desarrollé aplicaciones utilizando Python y FlySpeed SQL.</li>
+                    <li>Colaboré en la optimización de bases de datos y análisis de datos.</li>
+                    <li>Participé en el desarrollo de soluciones para mejorar la organización y trabajo en equipo.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <hr class="my-4">
+
+    <!-- Sección: Proyectos -->
+    <section id="proyectos" class="mt-5">
+        <h2 class="text-center">Proyectos</h2>
+        <div class="row justify-content-center mt-4">
+
+            <!-- Tarjeta del proyecto "Blog Capstone Project" -->
+            <div class="col-md-5">
+                <div class="card mb-4 shadow-sm">
+                    <img src="{% static 'images/proyectos/blogangela.png' %}" class="card-img-top" alt="Blog Capstone Project Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Blog Capstone Project</h5>
+                        <p class="card-text">
+                            Un proyecto completo de desarrollo de un blog usando Python, Flask, RESTful Routing y SQLAlchemy. Implementación de autenticación, publicación, edición y borrado de entradas (añadiendo permisos específicos de admin y usuarios) y gestión de bases de datos.
+                        </p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="https://github.com/KikolasDEV/blog-capstone-project" class="btn btn-primary" target="_blank">Ver en GitHub</a>
+                            <div>
+                                <i class="fab fa-python technology-icon"></i>
+                                <i class="fas fa-flask technology-icon"></i>
+                                <i class="fas fa-code technology-icon"></i>
+                                <i class="fab fa-bootstrap technology-icon"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tarjeta del proyecto "VirtualVault" -->
+            <div class="col-md-5">
+                <div class="card mb-4 shadow-sm">
+                    <img src="{% static 'images/proyectos/virtualvault.png' %}" class="card-img-top" alt="VirtualVault Project Image">
+                    <div class="card-body">
+                        <h5 class="card-title">VirtualVault</h5>
+                        <p class="card-text">
+                            Aplicación de Flutter diseñada para proporcionar una experiencia de compra en línea sencilla y efectiva. La aplicación permite a los usuarios explorar productos, gestionar favoritos, añadir artículos al carrito y realizar pedidos. Además, incluye funcionalidades de administrador.
+                        </p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="https://github.com/KikolasDEV/VirtualVault" class="btn btn-primary" target="_blank">Ver en GitHub</a>
+                            <div>
+                                <i class="fas fa-code technology-icon"></i>
+                                <i class="fas fa-mobile-alt technology-icon"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <hr class="my-4">
+
+        <!-- Sección: Tecnologías y Herramientas con Animación -->
+    <section id="tecnologias" class="mt-5">
+        <h2 class="text-center">Tecnologías y Herramientas</h2>
+        <div class="slider">
+            <div class="slide-track">
+                <div class="slide"><img src="{% static 'images/tecnologias/python.jpg' %}" alt="python"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/django.png' %}" alt="django"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/flask.png' %}" alt="flask"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/git.jpg' %}" alt="git"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/github.png' %}" alt="github"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/html.png' %}" alt="html"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/css.png' %}" alt="css"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/javascript.png' %}" alt="javascript"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/bootstrap.png' %}" alt="bootstrap"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/java.jpg' %}" alt="java"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/mysql.png' %}" alt="mysql"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/postgresql.png' %}" alt="postgresql"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/sqlite.png' %}" alt="sqlite"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/csharp.png' %}" alt="csharp"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/godot.jpg' %}" alt="godot"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/unity.png' %}" alt="unity"></div>
+
+                <div class="slide"><img src="{% static 'images/tecnologias/python.jpg' %}" alt="python"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/django.png' %}" alt="django"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/flask.png' %}" alt="flask"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/git.jpg' %}" alt="git"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/github.png' %}" alt="github"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/html.png' %}" alt="html"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/css.png' %}" alt="css"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/javascript.png' %}" alt="javascript"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/bootstrap.png' %}" alt="bootstrap"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/java.jpg' %}" alt="java"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/mysql.png' %}" alt="mysql"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/postgresql.png' %}" alt="postgresql"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/sqlite.png' %}" alt="sqlite"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/csharp.png' %}" alt="csharp"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/godot.jpg' %}" alt="godot"></div>
+                <div class="slide"><img src="{% static 'images/tecnologias/unity.png' %}" alt="unity"></div>
+            </div>
+        </div>
+    </section>
+
+    <hr class="my-4">
+
+    <!-- Sección: Formación -->
+    <section id="formacion" class="mt-5">
+        <h2>Formación</h2>
+        <p><strong>Udemy Certificate: Python and Django FullStack Web Developer Bootcamp</strong> - Jose Portilla | Octubre 2024 - Noviembre 2024</p>
+        <p><strong>Udemy Certificate: The Complete Python Pro Bootcamp</strong> - Angela Yu | Junio 2024 - Agosto 2024</p>
+        <p><strong>C.F.G.S. Desarrollo de Aplicaciones Multiplataforma</strong> - IES Vista Alegre | Septiembre 2022 - Junio 2024</p>
+        <p><strong>Grado en Arte Dramático</strong> - E.S.A.D. de Sevilla | Septiembre 2015 - Junio 2019</p>
+    </section>
 </div>
 
 {% endblock %}
+
+
